Fix formatting for Vanilla attribute modifiers added by CS